plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.4'
	id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'	// JPA 의존성
	implementation 'org.springframework.boot:spring-boot-starter-validation'	// Validation 의존성
	implementation 'org.springframework.boot:spring-boot-starter-web'	// Web 의존성
	compileOnly 'org.projectlombok:lombok'	// Lombok 의존성
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'com.mysql:mysql-connector-j'	// MySQL 드라이버 의존성s
	annotationProcessor 'org.projectlombok:lombok'	// Lombok 의존성
	testImplementation 'org.springframework.boot:spring-boot-starter-test'	// 테스트시 사용되는 의존성

	// jwt 토큰을 구현할때  필요한 의존성들
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

	implementation 'org.slf4j:slf4j-api'	// slf4j 관련 패키지 의존성
	implementation 'ch.qos.logback:logback-classic'	// 디버깅시에 로그를 찍어보는 의존성 (선택)

	// Spring Security
	implementation 'org.springframework.boot:spring-boot-starter-security'
	testImplementation 'org.springframework.security:spring-security-test'
	// security tag 사용
	implementation 'org.springframework.security:spring-security-taglibs'

	// 이메일 인증 - JavaMailApi 를 직접 사용하기 위한 의존성
	implementation 'javax.mail:mail:1.4.7'
	// Spring Context Support
	implementation 'org.springframework:spring-context-support:5.3.9'
	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-mail', version: '2.6.3'

	// Redis
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
}

tasks.named('test') {
	useJUnitPlatform()
}
